--- a/css/main.css
+++ b/css/main.css
@@ -1195,7 +1195,6 @@ p {
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    margin-right: 25px;
     background: #EDEDED;
     box-shadow: inset 4px 3px 8px -2px rgba(39, 40, 45, 0.2);
     transition: all 0.5s;
@@ -1221,7 +1220,25 @@ p {
   width: 100%;
 }
 
+.inclusive-wrapper {
+  position: relative;
+}
+
+.inclusive-shadow {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: linear-gradient(135deg, rgb(255, 81, 0), rgb(95, 0, 162));
+  filter: blur(40px);
+  border-radius: 12px;
+  opacity: 0.8;
+}
+
 .inclusive__box {
+  position: relative;
   padding: 32px 42px 70px 42px;
   background-color: #F5F5F5;
   border-radius: 12px;
@@ -1233,32 +1250,6 @@ p {
   position: relative;
   display: none;
   position: relative;
-}
-.inclusive__box::before {
-  z-index: -5;
-  content: "";
-  position: absolute;
-  inset: -5px;
-  transform: translate3d(0px, 0px, 0px);
-  background: #6E00A2;
-  mix-blend-mode: color-dodge;
-  filter: blur(32.5px);
-  border-radius: 19px;
-  filter: blur(20px);
-  opacity: 0.5;
-}
-.inclusive__box::after {
-  z-index: -6;
-  content: "";
-  position: absolute;
-  inset: -5px;
-  transform: translate3d(0px, 0px, 0px);
-  background: #FF5100;
-  mix-blend-mode: color-dodge;
-  filter: blur(38px);
-  border-radius: 19px;
-  filter: blur(45px);
-  opacity: 0.4;
 }
 .inclusive__box-content {
   margin-right: 65px;
@@ -1433,6 +1424,10 @@ p {
   color: #000000;
 }
 
+.inclusive__buttons {
+  width: 320px;
+}
+
 @media (max-width: 1250px) {
   .inclusive__box {
     height: 100%;
@@ -1539,20 +1534,20 @@ p {
   }
   .inclusive__button {
     white-space: nowrap;
-    width: 300px;
+    width: 320px;
   }
   .inclusive__buttons {
     white-space: nowrap;
-    width: 300px;
+    width: 320px;
   }
   .inclusive__btn {
     margin-top: 18px;
-    width: 350px;
+    width: 320px;
     white-space: nowrap;
   }
   .inclusive__btns {
     margin-top: 18px;
-    width: 350px;
+    width: 320px;
     white-space: nowrap;
   }
 }
@@ -1869,6 +1864,11 @@ p {
   }
   .grow__acc:last-child {
     margin: 0 0 0 0;
+  }
+}
+@media (max-width: 830px) {
+  .main__grow {
+    padding: 60px 0 180px 0;
   }
 }
 @media (max-width: 650px) {
