--- a/css/main.css
+++ b/css/main.css
@@ -1045,6 +1045,11 @@ p {
     box-shadow: inset 4px 3px 8px -2px rgba(39, 40, 45, 0.2);
   }
 }
+.price-btns {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
+}
+
 .card__box {
   display: flex;
   justify-content: space-between;
@@ -3821,15 +3826,6 @@ p {
   padding: 200px 0 110px 0;
 }
 
-.meet__heading-title {
-  max-width: 850px;
-  margin-bottom: 46px;
-}
-.meet__heading-tittle {
-  text-align: center;
-  margin-bottom: 36px;
-}
-
 .meet__calendar {
   position: relative;
 }
@@ -3841,17 +3837,6 @@ p {
   height: 43px;
 }
 .meet__calendar-img img {
-  width: 43px;
-  height: 43px;
-}
-.meet__calendar-imgs {
-  position: absolute;
-  bottom: 50px;
-  right: 250px;
-  width: 43px;
-  height: 43px;
-}
-.meet__calendar-imgs img {
   width: 43px;
   height: 43px;
 }
