--- a/css/main.css
+++ b/css/main.css
@@ -1048,6 +1048,7 @@ p {
 .price-btns {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
+  scroll-behavior: smooth;
 }
 
 .card__box {
